probando editar desde casa

--- a/practica1.html
+++ b/practica1.html
@@ -38,6 +38,8 @@
 
         <aside>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi deserunt doloribus nulla pariatur, perferendis possimus</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi deserunt doloribus nulla pariatur, perferendis possimus</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi deserunt doloribus nulla pariatur, perferendis possimus</p>
 
         </aside>
 
